Docker-Kubernates/create-application-grafana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  selector:
    matchLabels:
      run: grafana-oss
  replicas: 1
  template:
    metadata:
      labels:
        run: grafana-oss
    spec:
      containers:
        - name: grafana
          image: grafana/grafana-oss
          ports:
            - containerPort: 3000  # Change from 8080 to the desired port
              protocol: TCP
