Docker-Kubernates/create-application-jenkins.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts
          ports:
            - containerPort: 8080  # Default port for Jenkins web UI
              protocol: TCP
            - containerPort: 50000  # Default port for Jenkins agent connections
              protocol: TCP
