Docker-Kubernates/create-application-selenium.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium
spec:
  selector:
    matchLabels:
      run: selenium
  replicas: 1
  template:
    metadata:
      labels:
        run: selenium
    spec:
      containers:
        - name: selenium
          image: selenium/standalone-firefox:4.11.0-20230801
          ports:
            - containerPort: 4444  # Change from 8080 to the desired port
              protocol: TCP
            - containerPort: 7900  # Change from 8080 to the desired port
              protocol: TCP
