Docker-Kubernates/ingress-s3.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3-ingress
spec:
  rules:
    - host: kubernates-s3-test.mfzrl.cyou  # Replace with your desired hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s3
                port:
                  number: 9000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s3
                port:
                  number: 9001
