Docker-Kubernates/ingress-swagger.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swagger-ingress
spec:
  rules:
    - host: kubernates-swagger-test.mfzrl.cyou  # Replace with your desired hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: swagger
                port:
                  number: 8080
